--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backdrop Generator",
+  "name": "Autodrop",
   "id": "1309494260865214188",
   "api": "1.0.0",
   "main": "dist/code.js",
