--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "ui": "dist/ui.html",
   "capabilities": [],
   "enableProposedApi": false,
+  "documentAccess": "dynamic-page",
   "editorType": [
     "figma"
   ],
